k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: automobile-app-svc
  namespace: automobile
  labels:
    app: automobile-app
spec:
  selector:
    app: automobile-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
